--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -3,11 +3,19 @@
 #########
 
 # Specify the minimum version for CMake
-cmake_minimum_required(VERSION 2.8.0)
+cmake_minimum_required(VERSION 2.8)
 
 # Message
 message(STATUS "ISPD19 DR CUHK")
 message(STATUS ${CMAKE_CURRENT_SOURCE_DIR})
+message(STATUS ${PROJECT_SOURCE_DIR})
+
+
+set(CMAKE_INSTALL_RPATH_USE_LINK_PATH TRUE)
+set(LD_LIBRARY_PATH /usr/lib64)
+message(STATUS ${LD_LIBRARY_PATH})
+set(LIBRARY_PATH /usr/lib64)
+message(STATUS ${LIBRARY_PATH})
 
 # Find includes in the build directories
 set(CMAKE_INCLUDE_CURRENT_DIR ON)
@@ -22,7 +30,7 @@ set(LIBRARY_OUTPUT_PATH ${CMAKE_BINARY_DIR})
 set(CMAKE_CXX_STANDARD 14)
 
 set(PATH_RSYN ${CMAKE_CURRENT_SOURCE_DIR}/../rsyn)
-set(PATH_ISPD18 ${CMAKE_CURRENT_SOURCE_DIR})
+set(PATH_ICCAD19 ${CMAKE_CURRENT_SOURCE_DIR})
 
 ###################
 # Warnings/Errors #
@@ -33,8 +41,12 @@ set(CMAKE_CXX_FLAGS  "${CMAKE_CXX_FLAGS} -Werror=return-type")
 ######################
 # Check Dependencies #
 ######################
+# uncommment this line if you are using self-compiled boost lib
+# set(BOOST_LIBRARYDIR /ubc/ece/home/ai/grads/yuxuanpan/Envs/boost_1_75_0/stage/libs)
+set(BOOST_ROOT /ubc/ece/home/ai/grads/yuxuanpan/Envs/boost_1_75_0)
 set(Boost_USE_STATIC_LIBS ON)
-find_package(Boost COMPONENTS filesystem program_options REQUIRED)
+find_package(Boost COMPONENTS system filesystem program_options REQUIRED)
+# find_package(Threads)
 
 ###############
 # Source Code #
@@ -44,9 +56,11 @@ file(GLOB_RECURSE SRC_FILES_RSYN
     ${PATH_RSYN}/src/*.cc
     ${PATH_RSYN}/src/*.c)
 
-file(GLOB_RECURSE SRC_FILES_ISPD18 ${PATH_ISPD18}/*.cpp)
+file(GLOB_RECURSE SRC_FILES_ICCAD19
+    ${PATH_ICCAD19}/*.cpp
+    ${PATH_ICCAD19}/*.c)
 
-set(SRC_FILES ${SRC_FILES_RSYN} ${SRC_FILES_ISPD18})
+set(SRC_FILES ${SRC_FILES_RSYN} ${SRC_FILES_ICCAD19})
 
 #################
 # Library Paths #
@@ -61,6 +75,7 @@ if(${CMAKE_SYSTEM_NAME} MATCHES "Darwin")
 link_directories(${PATH_RSYN}/lib/macosx)
 endif()
 
+
 ###########
 # Targets #
 ###########
@@ -74,21 +89,26 @@ add_executable(ispd19dr ${SRC_FILES})
 include_directories(${PATH_RSYN}/src)
 include_directories(${PATH_RSYN}/src/rsyn/export)
 include_directories(${PATH_RSYN}/include)
-include_directories(${PATH_ISPD18})
+include_directories(${PATH_ICCAD19})
 
 #################
 # Linker Flags  #
 #################
 
 # TODO: set static under release mode only
-set_target_properties(ispd19dr PROPERTIES LINK_FLAGS "-static -Wl,--whole-archive -rdynamic -lpthread -Wl,--no-whole-archive")
-
-# Threads
-# target_link_libraries(ispd19dr ${CMAKE_THREAD_LIBS_INIT})
+set_target_properties(ispd19dr PROPERTIES LINK_FLAGS "-Wl,--whole-archive -rdynamic -lpthread -Wl,--no-whole-archive")
 
 # LEF/DEF
 target_link_libraries(ispd19dr lef)
 target_link_libraries(ispd19dr def)
+
+# LD libraries
+add_library(lm SHARED IMPORTED)
+set_target_properties(lm PROPERTIES IMPORTED_LOCATION "/usr/lib64/libm.so")
+target_link_libraries(ispd19dr lm)
+add_library(lpthread STATIC IMPORTED)
+set_target_properties(lpthread PROPERTIES IMPORTED_LOCATION "/usr/lib64/libpthread.so.0")
+target_link_libraries(ispd19dr lpthread)
 
 # Boost
 target_include_directories(ispd19dr PUBLIC ${Boost_INCLUDE_DIR})
